force-app/main/default/objects/AG_Referral__c/fields/AG_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>AG_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>