force-app/main/default/objects/AG_Referral__c/fields/AG_Date_Of_Referral__c.field-meta.xml
<CustomField>
    <fullName>AG_Date_Of_Referral__c</fullName>
    <label>Date Of Referral</label>
    <type>Date</type>
</CustomField>