force-app/main/default/objects/AG_Referral__c/fields/AG_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>AG_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>