force-app/main/default/objects/AG_Referral__c/fields/AG_Reffered_By__c.field-meta.xml
<CustomField>
    <fullName>AG_Reffered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reffered By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Reffered By)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>