force-app/main/default/objects/AG_Referral__c/fields/AG_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>AG_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>