force-app/main/default/objects/AG_Referral__c/fields/AG_Status__c.field-meta.xml
<CustomField>
    <fullName>AG_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>In Referral</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>